<resources>
    <string name="app_name">CarApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App logo</string>
    <string name="please_enter_your_information_your_license_plate_mobile_number_and_car_passcode_will_be_of_your_cobra_profile">Please enter your information. Your license plate, mobile number and car passcode will be of your cobra profile.</string>
    <string name="license_plate">License Plate</string>
    <string name="phone_number">Phone Number</string>
    <string name="agree_to_terms_and_conditions"><u>Agree to terms and conditions</u></string>
    <string name="register_to_service">Register to Service</string>
    <string name="car_passcode">Car Passcode</string>
    <string name="settings">Settings</string>
    <string name="car_icon_name">Car Icon Name</string>
    <string name="ford_focus_active_x_9446464">FORD FOCUS ACTIVE X \n9446464</string>
    <string name="location">Location</string>
    <string name="car_history">Car History</string>
    <string name="history">History</string>
    <string name="take_me_to_the_car">Take me to the car</string>
    <string name="max_speed">Max speed</string>
    <string name="car_status">CAR STATUS</string>
    <string name="_706_km">706 km</string>
    <string name="_07_05_2024_23_56_30">07/05/2024 23:56:30</string>
    <string name="car_location">Car location</string>
    <string name="main">Main</string>
    <string name="map">Map</string>
    <string name="report">Report</string>
    <string name="alerts">Alerts</string>
    <string name="trips_report">Trips Report</string>
    <string name="notifications">Notifications</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="version_0_19">Version: 0.19</string>
    <string name="sun_12_05_2024">Sun, 12/05/2024</string>
    <string name="_44_km">44 km</string>
    <string name="_10">10</string>
    <string name="stops">Stops</string>
    <string name="driving_time">Driving time:</string>
    <string name="_03_39_04">03:39:04</string>
    <string name="average_speed">Average Speed:</string>
    <string name="_11_kph">11 kph</string>
    <string name="parking_time">Parking time:</string>
    <string name="max_speed_">Max Speed:</string>
    <string name="_40_kph">40 kph</string>
    <string name="weekend">Weekend</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="this_app_in_maintained_by_l_d_israel_auto_equipment_ltd">This app in maintained by L.D. Israel Auto Equipment LTD</string>
    <string name="contact_service_cobra_co_il_036911124">Contact: service@cobra.co.il 036911124</string>
    <string name="_15_tozeret_haarezt_st_tel_aviv_69361_israel">15 Tozeret Haarezt St. Tel Aviv, 69361 Israel</string>
    <string name="please_enter_the_correct_code_sent_by_sms">Please enter the correct code sent by SMS</string>
    <string name="confirm">Confirm</string>
    <string name="button_one">Button one</string>
    <string name="button_tne">Button tne</string>
    <string name="button_three">Button three</string>
    <string name="button_four">Button four</string>
    <string name="cancel">CANCEL</string>
    <string name="you_have_4_attempts">You have <b>4</b> attempts</string>
    <string name="please_enter_your_car_4_digit_passcode">Please enter your car 4 digit Passcode.</string>
    <string name="_23_30">23:30</string>
    <string name="start">START</string>
    <string name="aylon_mall_aba_hillel_road_ramat_gan_israel">Aylon Mall/Aba Hillel Road, Ramat Gan, Israel</string>
    <string name="end">END</string>
    <string name="_6_km">6 km</string>
    <string name="km">km</string>
    <string name="time">Time</string>
    <string name="_00_03_24">00:03:24</string>
    <string name="_1_kph">1 kph</string>
    <string name="_28_kph">28 kph</string>
    <string name="information">Information</string>
    <string name="tow_mode">Tow Mode</string>
    <string name="rf9r_88_tahouitet_el_ghadir_lebanon">RF9R 88 Tahouitet El Ghadir, Lebanon</string>
    <string name="_110_km_h">110</string>
    <string name="km_h">km/h</string>
    <string name="trip_map">Trip Map</string>
    <string name="google_maps_api_key" translatable="false">${ApiKey}</string>
    <string name="avshalom_gissin_st_11_petahtikva_israel">Avshalom Gissin St 11, PetahTikva, Israel</string>


</resources>