<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/report_back"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_23_30"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/start"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"/>

    <TextView
        android:id="@+id/tv_start_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/aylon_mall_aba_hillel_road_ramat_gan_israel"
        android:textColor="@color/text_yellow"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/end"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start"/>

    <TextView
        android:id="@+id/tv_end_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/aylon_mall_aba_hillel_road_ramat_gan_israel"
        android:textColor="@color/text_yellow"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_start"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/distance"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end"/>

    <TextView
        android:id="@+id/tv_kilo_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/_6_km"
        android:textColor="@color/text_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_distance"
        app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
        app:layout_constraintStart_toEndOf="@id/tv_distance"/>

    <TextView
        android:id="@+id/tv_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_time_count"
        app:layout_constraintTop_toBottomOf="@id/tv_end"/>

    <TextView
        android:id="@+id/tv_time_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/_00_03_24"
        android:textColor="@color/text_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_time_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_divider"
        app:layout_constraintTop_toBottomOf="@id/tv_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_kilo_meter_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_1_kph"
        android:textColor="@color/text_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/view_one"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_max"/>

    <TextView
        android:id="@+id/tv_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
       app:layout_constraintTop_toBottomOf="@+id/tv_kilo_meter_per"
        app:layout_constraintStart_toStartOf="@id/tv_kilo_meter_per"
        app:layout_constraintEnd_toEndOf="@+id/tv_kilo_meter_per"/>

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_28_kph"
        android:textColor="@color/text_red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/view_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_kilo_meter_per"/>

    <TextView
        android:id="@+id/tv_max_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/max_speed"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_max"
        app:layout_constraintStart_toStartOf="@id/tv_max"
        app:layout_constraintEnd_toEndOf="@+id/tv_max"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>