<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/report_back"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sun_12_05_2024"
        android:textColor="@color/text_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/map_loc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/map_loc"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/map_location"
        app:layout_constraintEnd_toStartOf="@id/tv_distance"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/_44_km"
        android:textColor="@color/text_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/iv_distance"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_distance"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/distance"
        android:src="@drawable/ic_distance"
        app:layout_constraintEnd_toStartOf="@id/tv_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_10"
        android:textColor="@color/text_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_driving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/driving_time"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <TextView
        android:id="@+id/tv_driving_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_03_39_04"
        android:textColor="@color/text_yellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_driving"
        app:layout_constraintEnd_toStartOf="@id/tv_average"
        app:layout_constraintStart_toEndOf="@id/tv_driving"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <TextView
        android:id="@+id/tv_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/average_speed"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_average_speed"
        app:layout_constraintEnd_toStartOf="@id/tv_average_speed"
        app:layout_constraintStart_toEndOf="@id/tv_driving_time" />

    <TextView
        android:id="@+id/tv_average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_11_kph"
        android:textColor="@color/text_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <TextView
        android:id="@+id/tv_parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/parking_time"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_driving" />

    <TextView
        android:id="@+id/tv_parking_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_03_39_04"
        android:textColor="@color/text_yellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_parking"
        app:layout_constraintStart_toEndOf="@id/tv_parking" />

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:text="@string/max_speed"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_max_speed"
        app:layout_constraintEnd_toStartOf="@id/tv_max_speed"
        app:layout_constraintStart_toEndOf="@id/tv_parking_time" />

    <TextView
        android:id="@+id/tv_max_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_40_kph"
        android:textColor="@color/text_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_average" />

</androidx.constraintlayout.widget.ConstraintLayout>