<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:padding="3dp"
    android:background="@drawable/report_back">

    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/information"
        app:srcCompat="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_tow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/tow_mode"
        android:textColor="@color/text_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_info"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sun_12_05_2024"
        android:textColor="@color/text_yellow"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/iv_info"
        app:layout_constraintTop_toBottomOf="@id/tv_tow" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rf9r_88_tahouitet_el_ghadir_lebanon"
        android:textColor="@color/text_yellow"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/iv_info"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>