<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.DetailsFragment">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/lay_back_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_container">

        <ImageView
            android:id="@+id/tab_main"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/main"
            android:src="@drawable/tab_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/tab_map"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/map"
            android:src="@drawable/tab_map"
            app:layout_constraintStart_toEndOf="@+id/tab_main"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tab_report"/>

        <ImageView
            android:id="@+id/tab_report"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/report"
            android:src="@drawable/tab_report"
            app:layout_constraintStart_toEndOf="@+id/tab_map"
            app:layout_constraintEnd_toStartOf="@id/tab_alert"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/tab_alert"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/alerts"
            android:src="@drawable/tab_alert"
            app:layout_constraintEnd_toStartOf="@+id/tab_settings"
            app:layout_constraintStart_toEndOf="@id/tab_report"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/tab_settings"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/tab_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>