<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_blur_background"
    tools:context=".ui.fragments.OtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:background="@color/bg_dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_logo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/please_enter_the_correct_code_sent_by_sms"
            android:textColor="@color/white"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:background="@drawable/field_background"
            android:ems="10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center_vertical" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            android:textColor="@color/text_yellow"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/back_color"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>